# Loom

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  conanfile.py  justfile
.github/: copilot-instructions.md
.github/skills/cruntime-module-authoring/: SKILL.md
.github/workflows/: build-and-test.yml  build.yml  dev-build.yml  release.yml
cmake/: LoomModule.cmake
conan/profiles/: debug  emscripten  release
data/: UI  instances.json  scheduler.json  scheduler.schema.json
data/ClassExample/: config.schema.json
data/ExampleMotor/: config.json  config.schema.json
data/PneumaticActuator/: config.json  config.schema.json
data/Sequencer/: config.json  config.schema.json
data/StackLight/: config.json  config.schema.json
data/class_based/: config.json
data/ethercat/: config.json  config.schema.json
data/oscilloscope/: config.json  config.schema.json
data/right/: config.json  config.schema.json
data/test_actuator/: config.json
frontend/: .npmrc  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: dataService.ts  machine.ts  rest.ts  useHistory.ts  websocket.ts
frontend/src/components/: DataTree.css  DataTree.tsx  ModuleCard.tsx  ModuleRpcPanel.tsx  SectionPanel.tsx
frontend/src/pages/: BusView.tsx  Dashboard.tsx  MappingView.css  MappingView.tsx  ModuleDetail.tsx  ModulesDetails.css  OscilloscopeView.tsx  SchedulerView.tsx  WatchView.css  WatchView.tsx
frontend/src/wasm/: LoomRuntimeProvider.tsx  boot.ts  loomRuntime.js  wasmMode.ts
module-template/: CMakeLists.txt  README.md  conanfile.py  foo.cpp  foo.hpp  main.cpp
modules/: CMakeLists.txt
modules/class_based/: CMakeLists.txt  class_module.cpp  class_module.hpp
modules/command_probe/: CMakeLists.txt  command_probe.cpp
modules/crasher/: CMakeLists.txt  crasher.cpp
modules/ethercat/: CMakeLists.txt  device.hpp  ethercat.cpp  ethercat.hpp  main.cpp  main.hpp
modules/ethercat/cmake/: soem-Darwin.cmake  soem-macos-osal.c  soem-macos-osal_defs.h
modules/example_motor/: CMakeLists.txt  motor_module.cpp  motor_module.hpp
modules/oscilloscope/: CMakeLists.txt  oscilloscope.cpp
modules/pneumatic_actuator/: CMakeLists.txt  pneumatic_actuator.cpp  pneumatic_actuator.hpp
modules/sequencer/: CMakeLists.txt  sequencer.cpp  sequencer.hpp
modules/stack_light/: CMakeLists.txt  stack_light.cpp  stack_light.hpp
runtime/: CMakeLists.txt  conanfile.py  loom-runtime-exe.cmake
runtime/include/loom/: data_engine.h  data_engine.inl  data_store.h  dynlib.h  instance_manifest.h  io_mapper.h  module_loader.h  module_watcher.h  opcua_rest_nodeid.h  opcua_rest_server.h  opcua_rest_session.h  oscilloscope.h  runtime_core.h  runtime_heap_impl.h  scheduler.h  scheduler_config.h  server.h  thread_support.h
runtime/include/loom/api/: json_build.h  router.h
runtime/include/loom/diag/: breadcrumb.h  crash_handler.h  fault_report.h  fault_sink.h  fault_store.h  guard.h  runtime_fault_sink.h  symbolizer.h  system_metrics.h
runtime/src/: data_engine.cpp  data_store.cpp  io_mapper.cpp  main.cpp  module_loader.cpp  module_watcher.cpp  opcua_rest_server.cpp  oscilloscope.cpp  run.cpp  run_wasm.cpp  runtime_core.cpp  runtime_heap.cpp  scheduler.cpp  scheduler_config.cpp  server.cpp
runtime/src/api/: router.cpp
runtime/src/diag/: breadcrumb.cpp  crash_handler.cpp  fault_report.cpp  fault_store.cpp  runtime_fault_sink.cpp  symbolizer.cpp  system_metrics.cpp
sdk/: CMakeLists.txt  conanfile.py  loom-config.cmake.in
sdk/include/loom/: build_info.h  bus.h  command.h  command_client.h  command_glaze.h  export.h  module.h  port.h  runtime_heap.h  tag_table.hpp  tracer.hpp  types.h  version.h.in
sdk/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
tests/: CMakeLists.txt  module_test_util.h  test_bus.cpp  test_command_fb.cpp  test_command_integration.cpp  test_data_engine.cpp  test_data_store.cpp  test_diag.cpp  test_module_loader.cpp  test_port.cpp  test_runtime_heap.cpp  test_tag_table.cpp  test_trace_cache.cpp
